[project]
authors = [
    {name = "Durrant Lab", email = "durrantj@pitt.edu"}
]
maintainers = [
    {name = "Jacob Durrant", email = "durrantj@pitt.edu"}
]
description = "TODO"
name = "povme"
version = "2.2.1"
readme = "README.md"
requires-python = ">=3.12"
# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "numpy>=2.1.3,<3",
    "scipy>=1.14.1,<2",
]

[project.scripts]
povme = "povme.cli:povme_cli"

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["povme*"]
